--- a/css/style.css
+++ b/css/style.css
@@ -758,37 +758,37 @@ table td input::placeholder {
     font-size: 0.9rem;
   }
 
-  /* -------------------- WOD DE LA SEMANA -------------------- */
-  .wod-contenido {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    gap: 1rem;
-  }
+ /* -------------------- WOD DE LA SEMANA -------------------- */
+.wod-contenido {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* cambia de center a flex-start */
+  width: 100%;
+  gap: 1rem;
+}
 
-  .wod-descripcion,
-  .video {
-    width: 100%;
-    max-width: 320px;
-    margin: 0 auto;
-    text-align: center;
-  }
+.wod-descripcion,
+.video {
+  width: 100%;
+  max-width: 320px;
+  margin: 0; /* elimina el auto para que no se centre */
+  text-align: left; /* alinea texto a la izquierda */
+}
 
-  .wod-descripcion h3 {
-    font-size: 1.2rem;
-  }
+.wod-descripcion h3 {
+  font-size: 1.4rem;
+}
 
-  .wod-descripcion ul {
-    font-size: 0.85rem;
-    padding-left: 1rem; /* Para que no quede pegado */
-  }
+.wod-descripcion ul {
+  font-size: 0.85rem;
+  padding-left: 1rem;
+}
 
-  .video video {
-    max-width: 100%;
-    max-height: 250px;
-    height: auto;
-  }
+.video video {
+  max-width: 100%;
+  max-height: 250px;
+  height: auto;
+}
 
   /* -------------------- COACHES -------------------- */
   .coach-contenedor {
